[tool.poetry]
name = "repl_python3_mailserver"
version = "0.1.0"
description = ""
authors = ["DillonB07 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.3.2"
dill-tils = "^1.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
